update jenkins file

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,6 +9,12 @@ pipeline {
     }
 
     stages {
+        stage('Hello world') {
+            steps {
+               
+            }
+        }
+
         stage('Install dependencies') {
             steps {
                 sh '''
